# flexit-rag

./: .gitignore  FLEXIT_LLM_UTILITY.md  README.md  logger_config.py  main.py  pyproject.toml  requirements.txt  test_caption_fix.py
crawler/: __init__.py  main.py  missing_images_detailed_report.py  process_rag.py  rag_config.json
crawler/crawler_engine/: config.py  main.py  page_processor.py
crawler/debug/: README.md  __init__.py  analyze_domain_keywords.py  html_report_generator.py  html_text_extractor.py  image_analysis_module.py  rag_processor.py  rag_validation_test.py  run_validation.py  semantic_enrichment_analyzer.py
crawler/debug/image_enhancer_server/: README.md  app.py  generate_image_report.py  (+1 more)
crawler/md_pipeline/: __init__.py  html_to_md_converter.py  image_extractor_utility.py  md_chunking_strategy.py  md_pipeline_main.py  md_rag_processor.py  md_semantic_processor.py  post_crawler_processor.py  topic_extractor.py
crawler/url/: image_mapper.py  image_mapping_cache.json  page_url.py  url_encoder.py  url_mapper.py  url_mapping_cache.json
data_processor/: README.md  __init__.py  example_retrieval.py  qdrant_pipeline.py
flexit_llm/: functions.py  main.py
presentation/: flexit_rag_presentation.html
rag_retrieval/: README.md  __init__.py  cache_data_loader.py  data_models.py  document_loader.py  embedding_indexer.py  embeddings.py  example_retrieval.py  hybrid_retrieval_coordinator.py  qdrant_vector_store.py  retrieval_config.py  scoring_algorithms.py  topic_retriever.py
vector_processor/: __init__.py  document_loader.py  qdrant_pipeline.py
(+2 files in other folders)
